# solidworks_mcp

./: .gitignore  README.md  cad_task.md  pyproject.toml  solve_problem.md
apps/demo-backend/: .env.example  README.md  pyproject.toml
apps/demo-backend/src/demo_backend/: __init__.py  config.py  face_mappings.py  main.py  mcp_tools.py  models.py  state_store.py
apps/demo-backend/src/demo_backend/adapters/: llm_client.py  mcp_client.py
apps/demo-backend/src/demo_backend/services/: demo_service.py
apps/demo-backend/tools/McpToolRunner/: McpToolRunner.csproj  Program.cs
apps/demo-frontend/: README.md  index.html  package-lock.json  package.json
apps/demo-frontend/src/: api.ts  main.tsx  styles.css
artifacts/solidworks-mcp/logs/: DESKTOP-IJ96F29_20260511_174441.txt  DESKTOP-IJ96F29_20260511_174514.txt  DESKTOP-IJ96F29_20260512_152313.txt  DESKTOP-IJ96F29_20260512_165557.txt  DESKTOP-IJ96F29_20260512_174022.txt  DESKTOP-IJ96F29_20260513_135930.txt  DESKTOP-IJ96F29_20260513_144323.txt  DESKTOP-IJ96F29_20260513_161028.txt
demo/testdata/: B.SLDASM  ~$装配体4.SLDASM
scripts/: build_rag_index.py  capture_assembly_entity_annotations.py  crawl_solidworks_api.py  face_mapping_record_probe.py  face_mapping_verify_select.py  publish_solidworks_mcp.ps1  query_rag.py
solidworks_rag/: __init__.py  index.py
