[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solidworks-demo-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for the SolidWorks MCP layout demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]
